Proper escaping, additional translation.

--- a/i18n/hr_HR.csv
+++ b/i18n/hr_HR.csv
@@ -118,7 +118,7 @@ Month,Mjesec
 Year,Godina
 "No installments","Bez rata"
 "%1 installment(s)","%1 rata(e)"
-Pay,Pay
+Pay,Plati
 "If you're not redirected automatically, click ""Pay"" button","Ako se nije desila automatska redirekcija, kliknite na dugme ""Plati"""
 "Place Order","Naruči"
 "Required field!","Obavezno polje!"
