Fixing original string.

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -119,7 +119,7 @@
 "No installments","Keine Raten"
 "%1 installment(s)","%1 Rate(n)"
 "Pay","Bezahlen"
-"If you're not redirected automatically  click ""Pay"" button","Wenn Sie nicht automatisch umgeleitet werden, klicken Sie auf ""Bezahlen"""
+"If you're not redirected automatically, click ""Pay"" button","Wenn Sie nicht automatisch umgeleitet werden, klicken Sie auf ""Bezahlen"""
 "Place Order","Bestellung aufgeben"
 "Required field!","Pflichtfeld!"
 "You must enter 3 digits","Sie müssen 3 Ziffern eingeben"
