--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -119,7 +119,7 @@
 "No installments","Aucun versement"
 "%1 installment(s)","%1 versement(s)"
 "Pay","Payer"
-"If you're not redirected automatically  click ""Pay"" button","Si vous n'êtes pas redirigé automatiquement, cliquez sur le bouton ""Payer"""
+"If you're not redirected automatically, click ""Pay"" button","Si vous n'êtes pas redirigé automatiquement, cliquez sur le bouton ""Payer"""
 "Place Order","Passer l’ordre"
 "Required field!","Champs requis!"
 "You must enter 3 digits","Vous devez entrer 3 chiffres"
