--- a/i18n/it_IT.csv
+++ b/i18n/it_IT.csv
@@ -119,7 +119,7 @@
 "No installments","Nessuna rata"
 "%1 installment(s)","%1 rata(e)"
 "Pay","Paga"
-"If you're not redirected automatically  click ""Pay"" button","Se non vieni reindirizzato automaticamente, fai clic sul pulsante ""Paga"""
+"If you're not redirected automatically, click ""Pay"" button","Se non vieni reindirizzato automaticamente, fai clic sul pulsante ""Paga"""
 "Place Order","Invia ordine"
 "Required field!","Campo richiesto!"
 "You must enter 3 digits","Devi inserire 3 cifre"
