--- a/i18n/sk_SK.csv
+++ b/i18n/sk_SK.csv
@@ -119,7 +119,7 @@
 "No installments","Bez splátok"
 "%1 installment(s)","%1 splátka(splátky)"
 "Pay","Zaplatiť"
-"If you're not redirected automatically  click ""Pay"" button","Ak nie ste presmerovaný automaticky, kliknite tlačidlo ""Zaplatiť"""
+"If you're not redirected automatically, click ""Pay"" button","Ak nie ste presmerovaný automaticky, kliknite tlačidlo ""Zaplatiť"""
 "Place Order","Zadať objednávku"
 "Required field!","Povinné pole!"
 "You must enter 3 digits","Musíte zadať 3 číslice"
