--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,74 +1,43 @@
-"We can't initialize checkout.","We can't initialize checkout."
-"Invoice successfully created!","Invoice successfully created!"
-"Monri 3D Secure Verification","Monri 3D Secure Verification"
-"Invoking 3-D secure form, please wait ...","Invoking 3-D secure form, please wait ..."
-"Please click","Please click"
-"Order is cancelled!","Order is cancelled!"
-"Error occurred, order was not updated! Please contact your administrator...","Error occurred, order was not updated! Please contact your administrator..."
-"Order is paid! Monri approval code: %1","Order is paid! Monri approval code: %1"
-"Order is cancelled! Error: %1","Order is cancelled! Error: %1"
-"Order is cancelled. Payment unsuccessful, please try again.","Order is cancelled. Payment unsuccessful, please try again."
-"Entering credit card information... Processing!","Entering credit card information... Processing!"
-"Order redirected to Monri... Processing!","Order redirected to Monri... Processing!"
-"Order is successfully processed.","Order is successfully processed."
-"Error occurred, order not updated! Please contact your administrator... Order number: %1","Error occurred, order not updated! Please contact your administrator... Order number: %1"
-"INVALID DIGEST!","INVALID DIGEST!"
-"Order not paid, Monri response: %1","Order not paid, Monri response: %1"
-"Payment unsuccessful! Message: %1","Payment unsuccessful! Message: %1"
-"Order is cancelled... Response code: %1","Order is cancelled... Response code: %1"
-Bosnian,Bosnian
-Croatian,Croatian
+"Download Log","Download Log"
+"Download Log (no file)","Download Log (no file)"
+"Success URL","Success URL"
+"Cancel URL","Cancel URL"
+"Callback URL","Callback URL"
+"No installments","No installments"
+"%1 installment(s)","%1 installment(s)"
 English,English
 Spanish,Spanish
-"Bosnia-Herzegovina Convertible Mark","Bosnia-Herzegovina Convertible Mark"
-"Croatian Kuna","Croatian Kuna"
-Euro,Euro
-"US Dollar","US Dollar"
+Bosnian,Bosnian
+Croatian,Croatian
+Purchase,Purchase
 "Authorize Only","Authorize Only"
-Capture,Capture
-Form,Form
-DirectPay,DirectPay
-Monri,Monri
-"Transaction Approved","Transaction Approved"
-"Card Expired","Card Expired"
-"Card Suspicious","Card Suspicious"
-"Card Suspended","Card Suspended"
-"Card Stolen","Card Stolen"
-"Card Lost","Card Lost"
-"Card Not Found","Card Not Found"
-"Cardholder Not Found","Cardholder Not Found"
-"Account Not Found","Account Not Found"
-"Invalid Request","Invalid Request"
-"Not Sufficient Funds","Not Sufficient Funds"
-"Previously Reversed","Previously Reversed"
-"Further activity prevents reversal","Further activity prevents reversal"
-"Further activity prevents void","Further activity prevents void"
-"Original transaction has been voided","Original transaction has been voided"
-"Preauthorization is not allowed for this card","Preauthorization is not allowed for this card"
-"Only full 3D authentication is allowed for this card","Only full 3D authentication is allowed for this card"
-"Installments are not allowed for this card","Installments are not allowed for this card"
-"Transaction with installments can not be send as preauthorization","Transaction with installments can not be send as preauthorization"
-"Installments are not allowed for non ZABA cards","Installments are not allowed for non ZABA cards"
-"Transaction declined","Transaction declined"
+"File not on disk.","File not on disk."
+"Gateway payload empty.","Gateway payload empty."
+"Order not found.","Order not found."
+"The payment has been denied: %1","The payment has been denied: %1"
+"The payment has been denied.","The payment has been denied."
+"Error processing payment, please try again later.","Error processing payment, please try again later."
 "Missing fields.","Missing fields."
-"Extra fields exist","Extra fields exist"
-"Invalid card number","Invalid card number"
-"Card not active","Card not active"
-"Card not configured","Card not configured"
-"Invalid amount","Invalid amount"
-"System Error, Database","System Error, Database"
-"System Error, Transaction","System Error, Transaction"
-"Cardholder not active","Cardholder not active"
-"Cardholder not configured","Cardholder not configured"
-"Cardholder expired","Cardholder expired"
-"Original not found","Original not found"
-"Usage Limit Reached","Usage Limit Reached"
+"The payment has been accepted: %1","The payment has been accepted: %1"
+"The payment has been accepted.","The payment has been accepted."
+"Status field missing.","Status field missing."
+"There has been an issue processing your payment.","There has been an issue processing your payment."
+"Client error (%1): %2","Client error (%1): %2"
+"Client error (%1)","Client error (%1)"
+"Server error (%1)","Server error (%1)"
+"Order: #%1","Order: #%1"
+"The currency selected is not supported by Monri Payments.","The currency selected is not supported by Monri Payments."
+"Request has an invalid signature.","Request has an invalid signature."
+"Place Order","Place Order"
+"System error - database","System error - database"
+"System error - transaction","System error - transaction"
+"Usage limit reached","Usage limit reached"
 "Configuration error","Configuration error"
 "Invalid terminal","Invalid terminal"
 "Inactive terminal","Inactive terminal"
 "Invalid merchant","Invalid merchant"
 "Duplicate entity","Duplicate entity"
-"Invalid Acquirer","Invalid Acquirer"
+"Invalid acquirer","Invalid acquirer"
 "Internal error - host down","Internal error - host down"
 "Internal error - host timeout","Internal error - host timeout"
 "Internal error - invalid message","Internal error - invalid message"
@@ -82,6 +51,7 @@ Timeout,Timeout
 "3D Secure error - ECI 7","3D Secure error - ECI 7"
 "3D Secure error - not 3D Secure, store policy","3D Secure error - not 3D Secure, store policy"
 "3D secure error - not authenticated","3D secure error - not authenticated"
+"Request in progress","Request in progress"
 "RISK: Minimum amount per transaction","RISK: Minimum amount per transaction"
 "RISK: Maximum amount per transaction","RISK: Maximum amount per transaction"
 "RISK: Number of repeats per PAN","RISK: Number of repeats per PAN"
@@ -105,44 +75,49 @@ Timeout,Timeout
 "RISK: Number of repeats per IP","RISK: Number of repeats per IP"
 "RISK: Number of repeats per cardholder name","RISK: Number of repeats per cardholder name"
 "RISK: Number of repeats per cardholder e-mail","RISK: Number of repeats per cardholder e-mail"
-"Internal error - systan mismatch","Internal error - systan mismatch"
-"Error with Capture Action.","Error with Capture Action."
-"Trasaction is not Approved!","Trasaction is not Approved!"
-"Enter your credit card information.","Enter your credit card information."
-"Invalid credit card number","Invalid credit card number"
-"Invalid expiry date","Invalid expiry date"
-"Incorrect CVC number","Incorrect CVC number"
-"Card number","Card number"
-Cvv,Cvv
-Month,Month
-Year,Year
-"No installments","No installments"
-"%1 installment(s)","%1 installment(s)"
-Pay,Pay
-"If you're not redirected automatically, click ""Pay"" button","If you're not redirected automatically, click ""Pay"" button"
-"Place Order","Place Order"
-"Required field!","Required field!"
-"You must enter 3 digits","You must enter 3 digits"
+"Systan mismatch","Systan mismatch"
+"Monri Payments","Monri Payments"
 Enabled,Enabled
+"Sort Order","Sort Order"
 Title,Title
-Procesor,Procesor
-"Payment Type","Payment Type"
-"Payment Action","Payment Action"
-"Test Mode","Test Mode"
-Language,Language
 Key,Key
-"Auth Token","Auth Token"
-Currency,Currency
-"New Order Status","New Order Status"
-"Order Status ON Success","Order Status ON Success"
-"Order Status On Fail","Order Status On Fail"
+"Authenticity token","Authenticity token"
+Language,Language
+"Transaction Type","Transaction Type"
+Installments,Installments
+"Sandbox mode","Sandbox mode"
+Debug,Debug
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
-"Payment in installments","Payment in installments"
-"Number of installments","Number of installments"
-"Minimum amount of payments in installments","Minimum amount of payments in installments"
-"Order percentage for payment in installments %","Order percentage for payment in installments %"
-"List of Credit card BINs","List of Credit card BINs"
-"Order percentage %","Order percentage %"
-Instructions,Instructions
-"Sort Order","Sort Order"
+"Gateway Configuration Information","Gateway Configuration Information"
+Approved,Approved
+"Card expired","Card expired"
+"Card suspicious","Card suspicious"
+"Card suspended","Card suspended"
+"Card stolen","Card stolen"
+"Card lost","Card lost"
+"Card not found","Card not found"
+"Cardholder not found","Cardholder not found"
+"Account not found","Account not found"
+"Invalid request","Invalid request"
+"Not sufficient funds","Not sufficient funds"
+"Previously reversed","Previously reversed"
+"Further activity prevents reversal","Further activity prevents reversal"
+"Further activity prevents void","Further activity prevents void"
+"Original transaction has been voided","Original transaction has been voided"
+"Preauthorization is not allowed for this card","Preauthorization is not allowed for this card"
+"Only full 3D authentication is allowed for this card","Only full 3D authentication is allowed for this card"
+"Installments are not allowed for this card","Installments are not allowed for this card"
+"Transaction with installments can not be send as preauthorization","Transaction with installments can not be send as preauthorization"
+"Installments are not allowed for non ZABA cards","Installments are not allowed for non ZABA cards"
+"Transaction declined","Transaction declined"
+"Missing fields","Missing fields"
+"Extra fields exist","Extra fields exist"
+"Invalid card number","Invalid card number"
+"Card not active","Card not active"
+"Card not configured","Card not configured"
+"Invalid amount","Invalid amount"
+"Cardholder not active","Cardholder not active"
+"Cardholder not configured","Cardholder not configured"
+"Cardholder expired","Cardholder expired"
+"Original not found","Original not found"
