--- a/i18n/hr_HR.csv
+++ b/i18n/hr_HR.csv
@@ -27,3 +27,8 @@ Installments,Rate
 "Payment from Applicable Countries","Plaćanje iz odgovarajućih zemalja"
 "Payment from Specific Countries","Plaćanje iz određenih zemalja"
 "Gateway Configuration Information","Informacije o konfiguraciji"
+"Number of Installments","Broj rata"
+"Debug","Debug"
+"Obtain this value from your Monri Administration dashboard.","Ovu vrijednost možete provjeriti u svom Monri administracijskom sučelju."
+"The language that will be used when a customer is redirected to Monri.","Jezik koji će biti korišten na Monri strani."
+"Enter this into your Monri Administration dashboard.","Unesite ove podatke u vaše Monri administracijsko sučelje"
