improve wording in admin area

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -3,7 +3,7 @@
 "Success URL","Success URL"
 "Cancel URL","Cancel URL"
 "Callback URL","Callback URL"
-"No installments","No installments"
+"Undefined","Undefined"
 "%1 installment(s)","%1 installment(s)"
 English,English
 Spanish,Spanish
