--- a/i18n/hr_HR.csv
+++ b/i18n/hr_HR.csv
@@ -1,6 +1,6 @@
 "Download Log","Preuzimanje Loga"
 "Download Log (no file)","Preuzimanje Loga (nema datoteke)"
-"No installments","Jednokratno"
+"Undefined","Neodređeno"
 English,Engleski
 Spanish,Španjolski
 Bosnian,Bosanski
@@ -31,4 +31,4 @@ Installments,Rate
 "Debug","Debug"
 "Obtain this value from your Monri Administration dashboard.","Ovu vrijednost možete provjeriti u svom Monri administracijskom sučelju."
 "The language that will be used when a customer is redirected to Monri.","Jezik koji će biti korišten na Monri strani."
-"Enter this into your Monri Administration dashboard.","Unesite ove podatke u vaše Monri administracijsko sučelje"
+"Enter this into your Monri Administration dashboard.","Unesite ove podatke u vaše Monri administracijsko sučelje."
