Support for Slovenian language

--- a/i18n/sl_SI.csv
+++ b/i18n/sl_SI.csv
@@ -1,4 +1,4 @@
-"Download Log","Preuzimanje Loga"
+"Download Log","Dnevnik prenosa"
 "Download Log (no file)","Dnevnik prenosa (brez datoteke)"
 "Undefined","Nedoločeno"
 English,Angleščina
