--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -126,4 +126,4 @@ Approved,Approved
 "Order does not exist.","Order does not exist."
 "Gateway response is not valid.","Gateway response is not valid."
 "Save for later use.","Save for later use."
-"You will be redirected to the WSPay website when you place an order."
+"You will be redirected to the WSPay website when you place an order.","You will be redirected to the WSPay website when you place an order."
