Added custom message for saved payment expiration date.

--- a/i18n/hr_HR.csv
+++ b/i18n/hr_HR.csv
@@ -38,3 +38,4 @@ Installments,Rate
 "Gateway response is not valid.",Odgovor modula plaćanja nije valjan.
 "Save for later use.",Sačuvaj za kasniju upotrebu.
 "You will be redirected to the WSPay website when you place an order.","Nakon završetka narudžbe biti ćeš preusmjeren na stranice WSPay-a."
+"In beta, no accurate expiration date","U beta verziji, nema točnog datuma isteka"
