--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -127,3 +127,9 @@ Approved,Approved
 "Gateway response is not valid.","Gateway response is not valid."
 "Save for later use.","Save for later use."
 "You will be redirected to the WSPay website when you place an order.","You will be redirected to the WSPay website when you place an order."
+"Transaction ID","Transaction ID"
+"Approval code","Approval code"
+"Credit card type","Credit card type"
+"Credit card number","Credit card number"
+"Payment plan","Payment plan"
+"Date/Time","Date/Time"
